pkl-core/src/test/files/LanguageSnippetTests/input/errors/listingTypeCheckError2.pkl
one = 1

res = new Listing<String> {
  one
}
